Added Google search console verification tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ALAPATI MANIKANTA - Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="google-site-verification" content="_7AHqA2e8uGt9Zf1tNT8tNRxPf4PJ22tSGPgKn891BU" />
 </head>
 <body>
     <!-- Header/Navigation -->
